--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "micah-cantor-blog",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "description": "Micah Cantor's personal blog and projects",
+  "version": "1.0.0",
+  "author": "Micah Cantor",
   "dependencies": {
-    "gatsby": "^2.24.47",
+    "24a2": "file:../../forks/24a2",
+    "gatsby": "^2.24.91",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-manifest": "^2.4.23",
     "gatsby-plugin-offline": "^3.2.23",
@@ -14,6 +15,7 @@
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-remote-images": "^2.2.0",
     "gatsby-plugin-sharp": "^2.6.27",
+    "gatsby-plugin-typescript": "^2.4.25",
     "gatsby-plugin-umami": "^0.1.2",
     "gatsby-remark-katex": "^3.3.14",
     "gatsby-remark-prismjs": "^3.5.16",
@@ -26,7 +28,6 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-scroll-to-bottom": "^3.0.0",
     "tailwindcss": "^1.7.3"
   },
   "devDependencies": {
