--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "author": "Micah Cantor",
   "dependencies": {
-    "24a2": "file:../../forks/24a2",
+    "24a2": "github:micahcantor/24a2",
     "gatsby": "^2.24.91",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-manifest": "^2.4.23",
