--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-typescript": "^2.4.25",
     "gatsby-plugin-umami": "^0.1.2",
     "gatsby-remark-katex": "^3.3.14",
+    "gatsby-remark-numbered-footnotes": "^1.0.1",
     "gatsby-remark-prismjs": "^3.5.16",
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-transformer-remark": "^2.8.38",
