--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-sharp": "^2.6.27",
     "gatsby-plugin-typescript": "^2.4.25",
     "gatsby-plugin-umami": "^0.1.2",
+    "gatsby-remark-images": "^3.9.0",
     "gatsby-remark-katex": "^3.3.14",
     "gatsby-remark-numbered-footnotes": "^1.0.1",
     "gatsby-remark-prismjs": "^3.5.16",
